package fer.progi.playpadel.enumeration;

public enum CourtType {
    INDOOR, OUTDOOR
}
