package fer.progi.playpadel.enumeration;

public enum UserType {
    ADMIN, PLAYER, OWNER
}
